--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -15,7 +15,7 @@ jobs:
 
       - name: Setup SSH Key
         run: |
-          echo "${{ secrets.EC2_SSH_PRIVATE_KEY }}" > chiptunning.pem
+          echo "${{ secrets.EC2_SSH_KEY }}" > chiptunning.pem
           chmod 600 chiptunning.pem
 
       - name: Deploy to EC2
