--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -21,6 +21,7 @@ jobs:
       - name: Deploy to EC2
         run: |
           ssh -o StrictHostKeyChecking=no -i chiptunning.pem ubuntu@${{ secrets.EC2_HOST }} << 'EOF'
+            sudo su
             cd /var/www/chiptuning_backend_nodejs_local
             git pull origin main
             npm install
