--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "echo 'No build step required'"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.787.0",
+    "aws-sdk": "^2.1692.0",
     "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -18,6 +20,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.11.0",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.2",
+    "multer-s3": "^3.0.1",
     "transformers": "^3.1.0",
     "uglify-js": "^3.19.3"
   }
