--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@aws-sdk/client-s3": "^3.787.0",
     "aws-sdk": "^2.1692.0",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
