--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.2",
     "multer-s3": "^3.0.1",
+    "nodemailer": "^7.0.11",
     "transformers": "^3.1.0",
     "uglify-js": "^3.19.3"
   }
